# openab

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.antigravity  Dockerfile.claude  Dockerfile.codex  Dockerfile.copilot  Dockerfile.cursor  Dockerfile.gemini  Dockerfile.grok  Dockerfile.hermes  Dockerfile.openab-agent  Dockerfile.opencode  Dockerfile.pi  README.md  config.toml.example  index.yaml
.github/workflows/: build-gateway.yml  build-operator-branch.yml  build-operator.yml  build.yml  ci-openab-agent.yml  ci.yml  close-stale-prs.yml  docker-smoke-test.yml  pending-maintainer.yml  pr-preview.yml
agy-acp/src/: main.rs
charts/openab/: Chart.yaml  README.md  values.yaml
charts/openab-telegram/: Chart.yaml  README.md  values.yaml
docs/: agentcore.md  antigravity.md  codex.md  config-reference.md  cronjob.md  feishu.md  goal-driven-agent-loop.md  google-chat.md  hermes.md  image-tags.md  inbound-attachments.md  line.md  native-agent.md  opencode.md  openshell.md  pi.md  python.md  slash-commands.md  steering-design-guide.md  telegram.md  xai-proxy.md  zulip.md
docs/adr/: agentcore-runtime-backend.md  bootstrapping.md  control-directives.md  ecs-control-plane.md  (+4 more)
gateway/: Cargo.toml
openab-agent/: Cargo.toml
openab-agent/src/: acp.rs  agent.rs  auth.rs  llm.rs  main.rs  tools.rs
openshell/: Dockerfile
operator/: Cargo.toml
src/: adapter.rs  config.rs  cron.rs  discord.rs  dispatch.rs  error_display.rs  gateway.rs  main.rs  markdown.rs  media.rs  reactions.rs  remind.rs  secrets.rs  slack.rs  typing.rs  zulip.rs
(+41 files in other folders)
