[package]
name = "openab-agent"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Native Rust coding agent with built-in ACP support"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
tokio-util = { version = "0.7", features = ["io"] }
futures-util = "0.3"
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64 = "0.22.1"
sha2 = "0.11.0"
getrandom = "0.4.2"
urlencoding = "2.1.3"
open = "5.3.5"
url = "2.5.8"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
